<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackDark">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/btnClanMembers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/style_button_light"
            android:fontFamily="@font/hack"
            android:gravity="center"
            android:paddingHorizontal="10dp"
            android:paddingVertical="12dp"
            android:text="@string/members"
            android:textColor="@color/colorBackDark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/btnClanChat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/style_button_light"
            android:fontFamily="@font/hack"
            android:gravity="center"
            android:paddingHorizontal="10dp"
            android:paddingVertical="12dp"
            android:text="@string/clan_chat"
            android:textColor="@color/colorBackDark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/btnClanLeave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/style_button_light"
            android:fontFamily="@font/hack"
            android:gravity="center"
            android:paddingHorizontal="10dp"
            android:paddingVertical="12dp"
            android:text="@string/leave_clan"
            android:textColor="@color/colorBackDark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/btnClanRequests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/style_button_light"
            android:fontFamily="@font/hack"
            android:gravity="center"
            android:paddingHorizontal="10dp"
            android:paddingVertical="12dp"
            android:text="@string/request"
            android:textColor="@color/colorBackDark"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvClanName">

        <TextView
            android:id="@+id/tvClanRating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="@font/hack"
            android:paddingHorizontal="5dp"
            android:paddingVertical="4dp"
            android:text="Рейтинг: "
            android:textColor="@color/colorMain"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tvClanMembers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="@font/hack"
            android:paddingHorizontal="5dp"
            android:paddingVertical="4dp"
            android:text="Участников: "
            android:textColor="@color/colorMain"
            android:textSize="17sp" />


    </LinearLayout>

    <ImageView
        android:id="@+id/btnClanClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:src="@drawable/button_no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/ivClanAvatar"
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:layout_margin="25dp"
        android:background="@drawable/borber_avatar"
        android:padding="2dp"
        android:src="@drawable/icon_avatar_clan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnClanClose" />

    <TextView
        android:id="@+id/tvClanName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:fontFamily="@font/hack"
        android:text="TestClan"
        android:textColor="@color/colorMain"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivClanAvatar" />
</androidx.constraintlayout.widget.ConstraintLayout>